force-app/main/default/objects/Opportunity/fields/Current_FY_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Amount__c</fullName>
    <formula>IF(AND(CloseDate &lt; TODAY(), Probability &lt;&gt; 1), NULL, 

IF(OR(RecordType.Name = &quot;Planned Work&quot;, Probability = 1), Amount, Estimated_Amount__c) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current FY Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>