force-app/main/default/objects/Opportunity/fields/Current_FY_Amount_Planned_Work__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Amount_Planned_Work__c</fullName>
    <formula>IF(RecordType.DeveloperName &lt;&gt; &quot;Planned Work&quot;, NULL, 

IF(NOT(OR( 
AND(YEAR(CloseDate) = YEAR(TODAY()), 
MONTH(CloseDate) &gt; 6), 
AND(YEAR(CloseDate) = YEAR(TODAY())+1, 
MONTH(CloseDate) &lt; 7))), 

NULL, Amount))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current FY Amount Planned Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>