force-app/main/default/objects/Opportunity/fields/Curtain_Wall_Facade__c.field-meta.xml
<CustomField>
    <fullName>Curtain_Wall_Facade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Curtain Wall Facade</label>
    <type>Checkbox</type>
</CustomField>