force-app/main/default/objects/Opportunity/fields/Days_Since_Tendered__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Tendered__c</fullName>
    <formula>CloseDate  -  Tender_close_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Tendered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>