force-app/main/default/objects/Opportunity/fields/DB_Competitor_del__c.field-meta.xml
<CustomField>
    <fullName>DB_Competitor_del__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
    <label>DB Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor A</fullName>
            </value>
            <value>
                <fullName>Competitor B</fullName>
            </value>
            <value>
                <fullName>Competitor C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>