force-app/main/default/objects/Opportunity/fields/Defect_Free__c.field-meta.xml
<CustomField>
    <fullName>Defect_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defect Free</label>
    <type>Checkbox</type>
</CustomField>