force-app/main/default/objects/Opportunity/fields/Delivery_Project_Resources__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Project_Resources__c</fullName>
    <description>Delivery / Project Resources</description>
    <label>Delivery / Project Resources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Project_Resources</valueSetName>
    </valueSet>
</CustomField>