force-app/main/default/objects/Opportunity/fields/Design_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Design_Strategy__c</fullName>
    <label>Design Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>