force-app/main/default/objects/Opportunity/fields/ECI_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>ECI_Award_Date__c</fullName>
    <label>ECI Award Date</label>
    <type>Date</type>
</CustomField>