force-app/main/default/objects/Opportunity/fields/ECI_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>ECI_Close_Date__c</fullName>
    <label>ECI Close Date</label>
    <type>Date</type>
</CustomField>