force-app/main/default/objects/Opportunity/fields/ECI_Fee__c.field-meta.xml
<CustomField>
    <fullName>ECI_Fee__c</fullName>
    <label>ECI Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>