force-app/main/default/objects/Opportunity/fields/ECI_Negotiation_Assesment_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ECI_Negotiation_Assesment_Indicator__c</fullName>
    <description>Field will be update through a workflow. (Workflow rule: ECI Assessment Indicator)</description>
    <label>ECI Assesment Indicator</label>
    <length>25</length>
    <type>Text</type>
</CustomField>