force-app/main/default/objects/Opportunity/fields/ECI_Negotiation_Assessment__c.field-meta.xml
<CustomField>
    <fullName>ECI_Negotiation_Assessment__c</fullName>
    <formula>IF(  ECI_Negotiation_Assesment_Indicator__c =&quot;Strong&quot;, IMAGE(&quot;/resource/1458795666000/CSAT_Satisfied&quot;, &quot;&quot;), IF(ECI_Negotiation_Assesment_Indicator__c=&quot;Develop&quot;, IMAGE(&quot;/resource/1458795691000/CSAT_Neutral&quot;,&quot;&quot;), IMAGE(&quot;/resource/1458795716000/CSAT_Dissatisfied&quot;,&quot;&quot;,22,22)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECI Assessment</label>
    <type>Text</type>
</CustomField>