force-app/main/default/objects/Opportunity/fields/ECI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ECI_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the opportunity an ECI target?</description>
    <inlineHelpText>Is the opportunity an ECI target?</inlineHelpText>
    <label>ECI Opportunity</label>
    <type>Checkbox</type>
</CustomField>