force-app/main/default/objects/Opportunity/fields/ECI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ECI_Start_Date__c</fullName>
    <label>ECI Start Date</label>
    <type>Date</type>
</CustomField>