force-app/main/default/objects/Opportunity/fields/ECI_Start_Date_Countdown__c.field-meta.xml
<CustomField>
    <fullName>ECI_Start_Date_Countdown__c</fullName>
    <formula>IF(
    ECI_Start_Date__c &gt;= TODAY(), 
    IMAGE(&quot;/resource/FlagGreen&quot;, &quot;FlagGreen&quot;, 26, 26) &amp; &#39; &#39; &amp; TEXT(ECI_Start_Date__c - TODAY()) &amp; &#39; Days&#39;, 
IF(
ECI_Start_Date__c &lt; TODAY(),
    IMAGE(&quot;/resource/FlagRed&quot;, &quot;FlagRed&quot;, 26, 26) &amp; &#39; &#39; &amp; TEXT(ECI_Start_Date__c - TODAY()) &amp; &#39; Days&#39;, null

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECI Start Date Countdown</label>
    <type>Text</type>
</CustomField>