force-app/main/default/objects/Opportunity/fields/Employee_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Employee_Relationship__c</fullName>
    <formula>IF(
Employee_Relationship_Score__c &gt;=6,
IMAGE(&quot;/resource/1458795666000/CSAT_Satisfied&quot;, &quot;&quot;), 
IF(
AND(
Employee_Relationship_Score__c &lt;6, Employee_Relationship_Score__c &gt;=3), 
IMAGE(&quot;/resource/1458795691000/CSAT_Neutral&quot;,&quot;&quot;), IMAGE(&quot;/resource/1458795716000/CSAT_Dissatisfied&quot;,&quot;&quot;,22,22)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buildcorp Relationship</label>
    <type>Text</type>
</CustomField>