force-app/main/default/objects/Opportunity/fields/Employee_Relationship_Score__c.field-meta.xml
<CustomField>
    <fullName>Employee_Relationship_Score__c</fullName>
    <formula>Sum_Relationship_Score__c / Count_Contact_Roles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buildcorp Relationship Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>