force-app/main/default/objects/Opportunity/fields/End_of_Trip_Facility__c.field-meta.xml
<CustomField>
    <fullName>End_of_Trip_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End of Trip Facility</label>
    <type>Checkbox</type>
</CustomField>