force-app/main/default/objects/Opportunity/fields/EOI_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Close_Date__c</fullName>
    <label>EOI Close Date</label>
    <type>Date</type>
</CustomField>