force-app/main/default/objects/Opportunity/fields/EOI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Due_Date__c</fullName>
    <inlineHelpText>When is the EOI due for submission</inlineHelpText>
    <label>EOI Due Date</label>
    <type>Date</type>
</CustomField>