force-app/main/default/objects/Opportunity/fields/EOI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Start_Date__c</fullName>
    <label>EOI Start Date</label>
    <type>Date</type>
</CustomField>