force-app/main/default/objects/Opportunity/fields/EOI_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>EOI_Submission_Deadline__c</fullName>
    <label>EOI Submission Deadline</label>
    <type>Date</type>
</CustomField>