force-app/main/default/objects/Opportunity/fields/Essential_Services_Management__c.field-meta.xml
<CustomField>
    <fullName>Essential_Services_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Essential Services Management</label>
    <type>Checkbox</type>
</CustomField>