force-app/main/default/objects/Opportunity/fields/Europanel__c.field-meta.xml
<CustomField>
    <fullName>Europanel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Europanel</label>
    <type>Checkbox</type>
</CustomField>