force-app/main/default/objects/Opportunity/fields/Executive_Input__c.field-meta.xml
<CustomField>
    <fullName>Executive_Input__c</fullName>
    <description>Executive relationships and actions</description>
    <label>Executive Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>