force-app/main/default/objects/Opportunity/fields/Executive_Update__c.field-meta.xml
<CustomField>
    <fullName>Executive_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Click this box to add project to Executive Briefing meeting</description>
    <inlineHelpText>Click this box to add project to Executive Briefing meeting</inlineHelpText>
    <label>Executive Update</label>
    <type>Checkbox</type>
</CustomField>