force-app/main/default/objects/Opportunity/fields/Experience_in_similar_projects__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_similar_projects__c</fullName>
    <label>Experience in similar projects</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>