force-app/main/default/objects/Opportunity/fields/Experience_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Experience_Strategy__c</fullName>
    <label>Experience Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>