force-app/main/default/objects/Opportunity/fields/External_Hoarding__c.field-meta.xml
<CustomField>
    <fullName>External_Hoarding__c</fullName>
    <label>External Hoarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B Class</fullName>
            </value>
            <value>
                <fullName>A Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>