force-app/main/default/objects/Opportunity/fields/FFE__c.field-meta.xml
<CustomField>
    <fullName>FFE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FFE</label>
    <type>Checkbox</type>
</CustomField>