force-app/main/default/objects/Opportunity/fields/Field_for_grouping__c.field-meta.xml
<CustomField>
    <fullName>Field_for_grouping__c</fullName>
    <description>This field is used for grouping in reports to put all opportunities in a single group</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field for grouping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>