force-app/main/default/objects/Opportunity/fields/Final_Tendering_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Tendering_Decision__c</fullName>
    <description>Final Tendering Decision - Proceed to Tender or not</description>
    <label>Final Tendering Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>