force-app/main/default/objects/Opportunity/fields/Fit_Out__c.field-meta.xml
<CustomField>
    <fullName>Fit_Out__c</fullName>
    <label>Fit-Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Non-Integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>