force-app/main/default/objects/Opportunity/fields/Fit_out_cost_per_m2__c.field-meta.xml
<CustomField>
    <fullName>Fit_out_cost_per_m2__c</fullName>
    <description>Fit-out cost per square metre for future reference</description>
    <inlineHelpText>Allocate the most appropriate band</inlineHelpText>
    <label>Fit-out Cost Per m2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$1,000</fullName>
            </value>
            <value>
                <fullName>$1,000 - $1,500</fullName>
            </value>
            <value>
                <fullName>$1,500 - $2,000</fullName>
            </value>
            <value>
                <fullName>$2,000 - $2,500</fullName>
            </value>
            <value>
                <fullName>$2,500 - $3,000</fullName>
            </value>
            <value>
                <fullName>&gt;$3,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>