force-app/main/default/objects/Opportunity/fields/Fit_out_Density__c.field-meta.xml
<CustomField>
    <fullName>Fit_out_Density__c</fullName>
    <label>Fit-out Density</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;10 m2 / person</fullName>
            </value>
            <value>
                <fullName>10 - 15 m2 / person</fullName>
            </value>
            <value>
                <fullName>15 - 20 m2 / person</fullName>
            </value>
            <value>
                <fullName>&gt;20 m2 / person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>