force-app/main/default/objects/Opportunity/fields/Flight_Path__c.field-meta.xml
<CustomField>
    <fullName>Flight_Path__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight Path</label>
    <type>Checkbox</type>
</CustomField>