force-app/main/default/objects/Opportunity/fields/FSC_Audited__c.field-meta.xml
<CustomField>
    <fullName>FSC_Audited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSC Audited</label>
    <type>Checkbox</type>
</CustomField>