force-app/main/default/objects/Opportunity/fields/Group_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Group_Relationship__c</fullName>
    <formula>IF(Relationship_Total_Score__c &gt;=6, IMAGE(&quot;/resource/1458795666000/CSAT_Satisfied&quot;, &quot;&quot;), IF(AND(Relationship_Total_Score__c &lt;=5, Relationship_Total_Score__c &gt;=3), IMAGE(&quot;/resource/1458795691000/CSAT_Neutral&quot;,&quot;&quot;), IMAGE(&quot;/resource/1458795716000/CSAT_Dissatisfied&quot;,&quot;&quot;,22,22)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Relationship</label>
    <type>Text</type>
</CustomField>