force-app/main/default/objects/Opportunity/fields/Group_Relationship_Text__c.field-meta.xml
<CustomField>
    <fullName>Group_Relationship_Text__c</fullName>
    <formula>IF(Relationship_Total_Score__c &gt;=6, &quot;Strong&quot;, IF(AND(Relationship_Total_Score__c &lt;=5, Relationship_Total_Score__c &gt;=3), &quot;Develop&quot;, &quot;Weak&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Relationship Text</label>
    <type>Text</type>
</CustomField>