force-app/main/default/objects/Opportunity/fields/Heritage__c.field-meta.xml
<CustomField>
    <fullName>Heritage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heritage</label>
    <type>Checkbox</type>
</CustomField>