force-app/main/default/objects/Opportunity/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <label>History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>