force-app/main/default/objects/Opportunity/fields/History_of_Relationships_Tender_Result__c.field-meta.xml
<CustomField>
    <fullName>History_of_Relationships_Tender_Result__c</fullName>
    <description>History  of these relationships and tendering results </description>
    <inlineHelpText>History  of these relationships and tendering results </inlineHelpText>
    <label>History of Relationships / Tender Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>History_of_Relationships_Tender_Result</valueSetName>
    </valueSet>
</CustomField>