force-app/main/default/objects/Opportunity/fields/I3_BU_Rel_Status__c.field-meta.xml
<CustomField>
    <fullName>I3_BU_Rel_Status__c</fullName>
    <formula>IF(
ISBLANK(Influencer_3__c), &quot;&quot;,

CASE(Buildcorp_Business_Unit__c, 
&quot;Interiors NSW&quot;, TEXT( Influencer_3__r.Int_NSW_Relationship__c ),
&quot;Interiors QLD&quot;, TEXT(Influencer_3__r.Int_QLD_Relationship__c),
&quot;Interiors VIC&quot;, TEXT(Influencer_3__r.Int_Vic_Relationship__c),
&quot;Asset Solutions&quot;, TEXT(Influencer_3__r.Asset_Sol_Relationship__c),
&quot;Contracting&quot;, TEXT(Influencer_3__r.Contracting_Relationship__c),
&quot;&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I3 BU Rel Status</label>
    <type>Text</type>
</CustomField>