force-app/main/default/objects/Opportunity/fields/I4_BU_Rel_Status_del__c.field-meta.xml
<CustomField>
    <fullName>I4_BU_Rel_Status_del__c</fullName>
    <formula>IF(
ISBLANK(Influencer_4__c), &quot;&quot;,

CASE(Buildcorp_Business_Unit__c, 
&quot;Interiors NSW&quot;, TEXT( Influencer_4__r.Int_NSW_Relationship__c ),
&quot;Interiors QLD&quot;, TEXT(Influencer_4__r.Int_QLD_Relationship__c),
&quot;Interiors VIC&quot;, TEXT(Influencer_4__r.Int_Vic_Relationship__c),
&quot;Asset Solutions&quot;, TEXT(Influencer_4__r.Asset_Sol_Relationship__c),
&quot;Contracting&quot;, TEXT(Influencer_4__r.Contracting_Relationship__c),
&quot;&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I4 BU Rel Status</label>
    <type>Text</type>
</CustomField>