force-app/main/default/objects/Opportunity/fields/Indigenous_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indigenous Engagement</label>
    <type>Checkbox</type>
</CustomField>