force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Buildcorp_Business_Unit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial - Construction</fullName>
            </value>
            <value>
                <fullName>Commercial - Remedial</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Fit-out</fullName>
            </value>
            <value>
                <fullName>Fit-out - Corporate</fullName>
            </value>
            <value>
                <fullName>Fit-out - Shop</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Heavy Industrial - Construction</fullName>
            </value>
            <value>
                <fullName>Heavy Industrial - Remedial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Joinery - Asset Solutions</fullName>
            </value>
            <value>
                <fullName>Joinery - BCA</fullName>
            </value>
            <value>
                <fullName>Joinery - BCI</fullName>
            </value>
            <value>
                <fullName>Joinery - External</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refurbishment</fullName>
            </value>
            <value>
                <fullName>Residential - Remedial</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Student Housing</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Special Purpose</fullName>
            </value>
            <value>
                <fullName>Commercial Office</fullName>
            </value>
            <value>
                <fullName>Tertiary &amp; Education</fullName>
            </value>
            <value>
                <fullName>Hospitality &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Aged Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>