force-app/main/default/objects/Opportunity/fields/Influencer_1_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Influencer_1_Win_Percentage__c</fullName>
    <formula>(Influencer__r.Won_Count__c + Influencer__r.Under_Costruction_Count__c) / (Influencer__r.Won_Count__c + Influencer__r.Under_Costruction_Count__c +  Influencer__r.Lost_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influencer 1 Win %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>