force-app/main/default/objects/Opportunity/fields/Influencer_2__c.field-meta.xml
<CustomField>
    <fullName>Influencer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influencer 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Influencer 2)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>