force-app/main/default/objects/Opportunity/fields/Influencer_2_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Influencer_2_Relationship__c</fullName>
    <label>Influencer 2 Relationship</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>