force-app/main/default/objects/Opportunity/fields/Influencer_3__c.field-meta.xml
<CustomField>
    <fullName>Influencer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the client on this project</description>
    <inlineHelpText>If we know who the Infleuncer is on this project enter the company name here</inlineHelpText>
    <label>Influencer 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Influencer 3)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>